<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/iniciar_sesion"
        android:contentDescription="@string/iniciar_sesion_desc" />

    <EditText
        android:id="@+id/txtFicha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_marginTop="20dp"
        android:hint="@string/ficha_hint"
        android:inputType="number"
        android:padding="10dp"
        android:importantForAutofill="yes" />

    <EditText
        android:id="@+id/txtContrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtFicha"
        android:layout_marginTop="20dp"
        android:hint="@string/contrasena_hint"
        android:inputType="textPassword"
        android:padding="10dp"
        android:importantForAutofill="yes" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtContrasena"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/green"
        android:text="@string/btn_login"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/green"
        android:text="@string/btn_registrar"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnVerEmpleados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnRegistrar"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/green"
        android:text="@string/btn_ver_empleados_registrados"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:visibility="gone" />

</RelativeLayout>